--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -3131,6 +3131,8 @@
     <Content Include="Views\PsychologicalEvaluation\Zhao_ANXIETY_Y1.cshtml" />
     <Content Include="Views\PsychologicalEvaluation\EmotionalIntelligenceQuizForLeadership.cshtml" />
     <Content Include="Views\PsychologicalEvaluation\Zhao_ANXIETY_Y2.cshtml" />
+    <Content Include="Views\Home\Dashboard.cshtml" />
+    <Content Include="Views\HealthManagement\DoctorVisit.cshtml" />
     <None Include="Web.Installer.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
