--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -2994,6 +2994,7 @@
     <None Include="SQLScripts\09-Create-SPs\dbo.stpGetCrewOvertimeValue.StoredProcedure.sql" />
     <None Include="SQLScripts\09-Create-SPs\dbo.stpUpdateInActive.StoredProcedure.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Full_12.03.2021.sql" />
+    <Content Include="SQLScripts\Worth_SQL_Script_Full_18.12.2021%28usk%29.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_17.03.2021.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_17.03.2021_II.sql" />
